dataset1235/2025-2/2318198438/users/3542540266/executions/2445341515_604674078.log
== RUN (2025-09-02 00:18:05)
-- CODE: 
dolar = float(input())
reais = (valor_real x (322/100)

print(round(reais,2))

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
2
---- correct output:
6.44
-- ERROR:
File "XXXX", line 2
    reais = (valor_real x (322/100)
            ^
SyntaxError: '(' was never closed
-- TEST CASE 2:
---- input:
18
---- correct output:
57.96
-- ERROR:
File "XXXX", line 2
    reais = (valor_real x (322/100)
            ^
SyntaxError: '(' was never closed
-- TEST CASE 3:
---- input:
14
---- correct output:
45.08
-- ERROR:
File "XXXX", line 2
    reais = (valor_real x (322/100)
            ^
SyntaxError: '(' was never closed
-- TEST CASE 4:
---- input:
6
---- correct output:
19.32
-- ERROR:
File "XXXX", line 2
    reais = (valor_real x (322/100)
            ^
SyntaxError: '(' was never closed
-- TEST CASE 5:
---- input:
7
---- correct output:
22.54
-- ERROR:
File "XXXX", line 2
    reais = (valor_real x (322/100)
            ^
SyntaxError: '(' was never closed
-- TEST CASE 6:
---- input:
1
---- correct output:
3.22
-- ERROR:
File "XXXX", line 2
    reais = (valor_real x (322/100)
            ^
SyntaxError: '(' was never closed
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-02 00:20:06)
-- CODE: 
dolar = float(input())
reais = (dolar* (322/100))
print(round(reais,2))

-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
2
---- correct output:
6.44
---- user output:
6.44
-- TEST CASE 2:
---- input:
18
---- correct output:
57.96
---- user output:
57.96
-- TEST CASE 3:
---- input:
14
---- correct output:
45.08
---- user output:
45.08
-- TEST CASE 4:
---- input:
6
---- correct output:
19.32
---- user output:
19.32
-- TEST CASE 5:
---- input:
7
---- correct output:
22.54
---- user output:
22.54
-- TEST CASE 6:
---- input:
1
---- correct output:
3.22
---- user output:
3.22
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-02 00:18:25)
-- CODE: 
dolar = float(input())
reais = (valor_real * (322/100))
print(round(reais,2))

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
2
---- correct output:
6.44
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    reais = (valor_real * (322/100))
             ^^^^^^^^^^
NameError: name 'valor_real' is not defined
-- TEST CASE 2:
---- input:
18
---- correct output:
57.96
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    reais = (valor_real * (322/100))
             ^^^^^^^^^^
NameError: name 'valor_real' is not defined
-- TEST CASE 3:
---- input:
14
---- correct output:
45.08
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    reais = (valor_real * (322/100))
             ^^^^^^^^^^
NameError: name 'valor_real' is not defined
-- TEST CASE 4:
---- input:
6
---- correct output:
19.32
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    reais = (valor_real * (322/100))
             ^^^^^^^^^^
NameError: name 'valor_real' is not defined
-- TEST CASE 5:
---- input:
7
---- correct output:
22.54
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    reais = (valor_real * (322/100))
             ^^^^^^^^^^
NameError: name 'valor_real' is not defined
-- TEST CASE 6:
---- input:
1
---- correct output:
3.22
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    reais = (valor_real * (322/100))
             ^^^^^^^^^^
NameError: name 'valor_real' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
